<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrazeMaze</string>
    <string name="action_settings">Settings</string>
    <string name="next_button">Next</string>
    <string name="pageone">Welcome to TrazeMaze.</string>
    <string name="pageoneagain">Trace within the image with your finger and make sure you don\'t get out.Once you are done click the next button.</string>
    <string name="pageoneyetagain">Enjoy!</string>
    <string name="desc"></string>
    

</resources>
